fix header spacing

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -82,7 +82,7 @@ header {
   font-weight: bold;
   font-size: 8vw;
   line-height: 46px;
-  margin: 21px auto;
+  margin: 4vh auto;
 }
 
 .home-main {
